GearsetPOC/force-app/main/default/objects/B2b_AccountPCC__c/B2b_AccountPCC__c.object-meta.xml
<CustomObject>
    <description>Custom object migrated from Thango as part of Eurostar Delta migration project. Eurostar Jira ref DEIS-225</description>
    <label>Account PCC</label>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Account PCC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account PCC&#39;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>