GearsetPOC/force-app/main/default/objects/B2b_AccountPCC__c/fields/Active_PCC_Codes__c.field-meta.xml
<CustomField>
    <fullName>Active_PCC_Codes__c</fullName>
    <label>Active PCC Codes</label>
    <summaryFilterItems>
        <field>B2b_AccountPCCCode__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>B2b_AccountPCCCode__c.B2b_AccountPCC__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>