GearsetPOC/force-app/main/default/objects/B2b_AccountPCC__c/fields/Agencies_Network__c.field-meta.xml
<CustomField>
    <fullName>Agencies_Network__c</fullName>
    <formula>TEXT(B2b_OfficeId__r.B2b_AgenciesNetwork__c)</formula>
    <label>Agencies Network</label>
    <type>Text</type>
</CustomField>