GearsetPOC/force-app/main/default/objects/B2b_AccountPCC__c/fields/B2b_Account__c.field-meta.xml
<CustomField>
    <fullName>B2b_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Business_Account__c</referenceTo>
    <relationshipLabel>Account PCC Names</relationshipLabel>
    <relationshipName>Account_PCC_Names</relationshipName>
    <type>Lookup</type>
</CustomField>