GearsetPOC/force-app/main/default/objects/B2b_AccountPCC__c/fields/B2b_Delete__c.field-meta.xml
<CustomField>
    <fullName>B2b_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you want to delete this PCC for this Account?</inlineHelpText>
    <label>Delete</label>
    <type>Checkbox</type>
</CustomField>