GearsetPOC/force-app/main/default/objects/B2b_AccountPCC__c/fields/B2b_EudoNetExternalId__c.field-meta.xml
<CustomField>
    <fullName>B2b_EudoNetExternalId__c</fullName>
    <label>B2b_EudoNetExternalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>