GearsetPOC/force-app/main/default/objects/B2b_AccountPCC__c/fields/B2B_IATACode__c.field-meta.xml
<CustomField>
    <fullName>B2B_IATACode__c</fullName>
    <formula>B2b_OfficeId__r.B2b_IATACode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IATA Code</label>
    <type>Text</type>
</CustomField>