GearsetPOC/force-app/main/default/objects/B2b_AccountPCC__c/fields/B2b_InsertExtracted__c.field-meta.xml
<CustomField>
    <fullName>B2b_InsertExtracted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insert Extracted</label>
    <type>Checkbox</type>
</CustomField>