GearsetPOC/force-app/main/default/objects/B2b_AccountPCC__c/fields/B2b_OfficeIdCode__c.field-meta.xml
<CustomField>
    <fullName>B2b_OfficeIdCode__c</fullName>
    <formula>B2b_OfficeId__r.B2b_OfficeIdCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PCC Code</label>
    <type>Text</type>
</CustomField>