GearsetPOC/force-app/main/default/objects/B2b_AccountPCC__c/fields/B2b_OfficeIdCode_Changed__c.field-meta.xml
<CustomField>
    <fullName>B2b_OfficeIdCode_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PCC Code Changed</label>
    <type>Checkbox</type>
</CustomField>