GearsetPOC/force-app/main/default/objects/B2b_AccountPCC__c/fields/B2b_ParentAccount__c.field-meta.xml
<CustomField>
    <fullName>B2b_ParentAccount__c</fullName>
    <formula>B2b_Account__r.ParentId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account</label>
    <type>Text</type>
</CustomField>