GearsetPOC/force-app/main/default/objects/B2b_AccountPCC__c/fields/PCC_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>PCC_Code_Name__c</fullName>
    <formula>B2b_OfficeId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PCC Code</label>
    <type>Text</type>
</CustomField>