GearsetPOC/force-app/main/default/objects/B2b_AccountPCC__c/recordTypes/B2b_Deleted.recordType-meta.xml
<RecordType>
    <fullName>B2b_Deleted</fullName>
    <active>true</active>
    <label>2 - Deleted</label>
</RecordType>