GearsetPOC/force-app/main/default/objects/B2b_AccountPCC__c/recordTypes/B2b_Operational.recordType-meta.xml
<RecordType>
    <fullName>B2b_Operational</fullName>
    <active>true</active>
    <label>1 - Operational</label>
</RecordType>