GearsetPOC/force-app/main/default/objects/B2b_AccountPCC__c/validationRules/B2b_RTDeleted.validationRule-meta.xml
<ValidationRule>
    <fullName>B2b_RTDeleted</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; RecordType.DeveloperName = &#39;B2b_Deleted&#39;</errorConditionFormula>
    <errorMessage>You can not create a deleted PCC Account Relation</errorMessage>
</ValidationRule>